Almost done implementation section

--- a/submissions/dissertation/bibliography.bib
+++ b/submissions/dissertation/bibliography.bib
@@ -1,15 +1,23 @@
+@book{FisherYates1938,
+	title = {Statistical tables for biological, agricultural and medical research},
+	author = {Fisher, Ronald A and Yates, Frank},
+	year = {1938},
+	edition = 3,
+	publisher = {Oliver and Boyd Ltd, London}
+}
+
 @article{Hanson2003,
-	author={Robin Hanson},
-	title={{Combinatorial Information Market Design}},
-	journal={Information Systems Frontiers},
-	year=2003,
-	volume={5},
-	number={1},
-	pages={107-119},
-	month={January},
-	keywords={market maker; scoring rule; information aggregation},
-	doi={10.1023/A:1022058209073},
-	url={https://ideas.repec.org/a/spr/infosf/v5y2003i1d10.1023_a1022058209073.html}
+	author = {Robin Hanson},
+	title = {{Combinatorial Information Market Design}},
+	journal = {Information Systems Frontiers},
+	year = 2003,
+	volume = {5},
+	number = {1},
+	pages = {107-119},
+	month = {January},
+	keywords = {market maker; scoring rule; information aggregation},
+	doi = {10.1023/A:1022058209073},
+	url = {https://ideas.repec.org/a/spr/infosf/v5y2003i1d10.1023_a1022058209073.html}
 }
 
 @inproceedings{Chen2007,
@@ -199,11 +207,14 @@
   note = {Accessed: 2020-02-16}
 }
 
-@article{LMSR,
-	title = {Logarithmic {Market} {Scoring} {Rules} for {Modular} {Combinatorial} {Information} {Aggregation}},
-	language = {en},
-	author = {Hanson, Robin},
-	pages = {12},
+@article{Hanson2007,
+	title = {Logarithmic Markets Scoring Rules for Modular Combinatorial
+		Information Aggregation},
+	author = {R. Hanson},
+	journal = {Journal of Prediction Markets},
+	year = {2007},
+	volume = {1},
+	pages = {3-15}
 }
 
 @phdthesis{Witkowski2014,
