--- a/submissions/dissertation/sections/goals.tex
+++ b/submissions/dissertation/sections/goals.tex
@@ -11,10 +11,10 @@ subset of the users known as arbiters. A user may even act as an arbiter in a
 market in which they themselves may hold a stake. Specifically, we seek to:
 
 \begin{itemize}
-	\item create a web application on which to host the prediction market
-	\item allow users to create custom bets
+	\item create a web application on which users can create custom bets and
+		trade on these markets
 	\item implement a trading mechanism that allows users to buy and sell
-		shares in the user-made securities
+		shares in the user-made securities using play money
 	\item crowdsource outcome determination using reports from arbiters who may
 		hold positions in the market
 	\item incentivise truthful behaviour at all stages in the mechanism
